Change posts endpoint to use pagination
